--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
-.App {
-  text-align: center;
+/** @format */
+body {
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+}
+#header {
+	margin: 0px;
+}
+.loadingPage {
+	background-color: black;
+	height: 100vh;
+	width: 100vw;
+	animation: fadeout 1s ease-in;
+	animation-fill-mode: forwards;
+	animation-delay: 1.5s;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@keyframes fadeout {
+	50% {
+		opacity: 100%;
+		transform: translateY(0%);
+	}
+	100% {
+		opacity: 0%;
+		transform: translateY(100%);
+		display: none;
+	}
 }
