--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,8 @@ body {
 	animation: fadeout 1s ease-in;
 	animation-fill-mode: forwards;
 	animation-delay: 1.5s;
+	position: absolute;
+	top: 0;
 }
 
 @keyframes fadeout {
@@ -25,5 +27,38 @@ body {
 		opacity: 0%;
 		transform: translateY(100%);
 		display: none;
+	}
+}
+
+.App {
+}
+
+@keyframes slide-down {
+	0% {
+		transform: translateY(-100%);
+	}
+	100% {
+		transform: translateY(100%);
+	}
+}
+
+.mhLogo {
+	padding: 15px;
+	width: 20vw;
+
+	animation: slide-shrink 15s linear infinite;
+	animation-fill-mode: forwards;
+	animation-delay: 1.5s;
+	position: absolute;
+	top: -10;
+}
+
+@keyframes slide-shrink {
+	0% {
+		transform: rotate(0deg);
+	}
+
+	100% {
+		transform: rotate(360deg);
 	}
 }
