--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@
 body {
 	margin: 0;
 	padding: 0;
-	overflow: hidden;
 }
 #header {
 	margin: 0px;
@@ -10,12 +9,13 @@ body {
 .loadingPage {
 	background-color: black;
 	height: 100vh;
-	width: 100vw;
+	width: 100%;
 	animation: fadeout 1s ease-in;
 	animation-fill-mode: forwards;
 	animation-delay: 1.5s;
 	position: absolute;
 	top: 0;
+	z-index: 2;
 }
 
 @keyframes fadeout {
@@ -30,35 +30,11 @@ body {
 	}
 }
 
-.App {
-}
-
 @keyframes slide-down {
 	0% {
 		transform: translateY(-100%);
 	}
 	100% {
 		transform: translateY(100%);
-	}
-}
-
-.mhLogo {
-	padding: 15px;
-	width: 20vw;
-
-	animation: slide-shrink 15s linear infinite;
-	animation-fill-mode: forwards;
-	animation-delay: 1.5s;
-	position: absolute;
-	top: -10;
-}
-
-@keyframes slide-shrink {
-	0% {
-		transform: rotate(0deg);
-	}
-
-	100% {
-		transform: rotate(360deg);
 	}
 }
