--- a/src/components/PageOne/PageStyles.css
+++ b/src/components/PageOne/PageStyles.css
@@ -1,6 +1,10 @@
 /** @format */
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap");
 
+.scroll-magic {
+	overflow-x: hidden;
+}
+
 .mhLogo {
 	padding: 25px;
 	width: 20vw;
@@ -38,13 +42,14 @@
 	position: absolute;
 	z-index: -1;
 	white-space: nowrap;
-	font-size: 50px;
+	top: -100px;
+	font-size: 25px;
 	font-family: "Montserrat", sans-serif;
 	opacity: 0.3;
 }
 
 .forward {
-	translate: transformY(-10px);
+	padding: 50px;
 }
 
 .absolute2 {
@@ -52,14 +57,15 @@
 	font-weight: 100;
 	position: absolute;
 	z-index: -1;
+	top: -140px;
 	white-space: nowrap;
-	font-size: 50px;
-	padding-top: 200px;
+	font-size: 25px;
 	font-family: "Montserrat", sans-serif;
 	opacity: 0.3;
 }
 
 .backward {
+	padding: 50px;
 }
 
 /* page two styles ///////////////////////////////////////////////////// */
@@ -84,8 +90,61 @@
 	/* border: 1px solid white; */
 }
 
-#page-one-div > * {
-	/* border: 1px solid black; */
+.project-container {
+	width: 100vw;
+	height: 100vh;
+}
+
+.project {
+	height: 100%;
+	width: 100vw;
+	float: left;
+}
+
+.responsive-design {
+	max-width: 80%;
+}
+
+.logo-2 {
+	width: 50%;
+	opacity: 0.1;
+	position: absolute;
+	z-index: 0;
+	top: 0;
+	left: 0;
+	padding: 0 15px;
+}
+
+.page-one {
+	background-color: #ffffff;
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 32 32'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='Artboard-5' fill='%23dadada' fill-opacity='0.25' fill-rule='nonzero'%3E%3Cpath d='M6 18h12V6H6v12zM4 4h16v16H4V4z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+}
+.page-two {
+	background-color: #ffffff;
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='152' height='152' viewBox='0 0 152 152'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='temple' fill='%23e8e7e9' fill-opacity='0.4'%3E%3Cpath d='M152 150v2H0v-2h28v-8H8v-20H0v-2h8V80h42v20h20v42H30v8h90v-8H80v-42h20V80h42v40h8V30h-8v40h-42V50H80V8h40V0h2v8h20v20h8V0h2v150zm-2 0v-28h-8v20h-20v8h28zM82 30v18h18V30H82zm20 18h20v20h18V30h-20V10H82v18h20v20zm0 2v18h18V50h-18zm20-22h18V10h-18v18zm-54 92v-18H50v18h18zm-20-18H28V82H10v38h20v20h38v-18H48v-20zm0-2V82H30v18h18zm-20 22H10v18h18v-18zm54 0v18h38v-20h20V82h-18v20h-20v20H82zm18-20H82v18h18v-18zm2-2h18V82h-18v18zm20 40v-18h18v18h-18zM30 0h-2v8H8v20H0v2h8v40h42V50h20V8H30V0zm20 48h18V30H50v18zm18-20H48v20H28v20H10V30h20V10h38v18zM30 50h18v18H30V50zm-2-40H10v18h18V10z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+}
+
+.project-title {
+	max-width: 50%;
+	padding: 0px 15px;
+	font-size: 40px;
+	font-family: "Montserrat", sans-serif;
+	color: Black;
+}
+
+.project-description {
+	padding: 0px 15px;
+	width: 70%;
+	font-weight: 100;
+}
+
+.project-technologies {
+	display: inline;
+}
+
+.constant-mhlogo {
+	position: absolute;
+	width: 10000px;
 }
 
 @keyframes slide-shrink {
@@ -104,7 +163,7 @@
 	}
 	.absolute {
 		font-size: 20px;
-		top: px;
+		top: 20px;
 	}
 	.absolute2 {
 		font-size: 20px;
